--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=beer-order-service
+spring.application.name=order-service
 
 spring.profiles.active=localmysql,localdiscovery
 logging.level.guru=debug
