--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -21,3 +21,5 @@ spring.datasource.hikari.data-source-properties.maintainTimeStats=false
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.cloud.discovery.enabled=false
