adding docker build and update of BOM

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ spring.artemis.password=simetraehcapa
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 
+spring.data.jpa.repositories.bootstrap-mode=default
+
 spring.zipkin.baseUrl=http://192.168.99.100:9411/
